# web-hacker

./: .env.example  .gitignore  .pylintrc  CLAUDE.md  CODEOWNERS  README.md  chat_agent_cli.py  executed_ui_events.json  generate_usaspending_count_routine.py  generate_usaspending_routine.py  jetblue_oneway_params_ops.json  list_vectorstores.py  llm_context_manager_cli.py  llm_context_manager_v2.py  llm_context_manager_v3.py  pyproject.toml  quickstart.py  repeat_UI_interactions.py  routine.json  routine_count.json  specialists_plan_step2.md  test_datastore.py  test_productionize_routine.py  ui_elements.py
.github/workflows/: claude.yml  publish.yml  tests.yml
agent_docs/: debugging.md  docs_endpoints.md  docs_examples.md  docs_execution.md  docs_overview.md  docs_parameters.md  docs_placeholders.md  docs_routine_creation_overview.md  docs_routines.md
agent_docs/common-issues/: element-not-found.md  execution-timeout.md  fetch-returns-html.md  js-evaluate-issues.md  page-not-loaded.md  placeholder-not-resolved.md  unauthenticated.md
agent_docs/core/: execution.md  parameters.md  placeholders.md  routines.md
agent_docs/operations/: click.md  data-extraction.md  docs_operations_overview.md  download.md  fetch.md  input_text.md  js-evaluate.md  js_evaluate.md  navigate.md  navigation.md  overview.md  press.md  return.md  return_html.md  scroll.md  sleep.md  ui-operations.md  wait_for_url.md
bluebox/: __init__.py  config.py
bluebox/agent_docs/: examples.md
bluebox/agents/: __init__.py  guide_agent.py  network_spy.py  network_spy_agent.py  routine_discovery_agent.py
bluebox/cdp/: async_cdp_session.py  cdp_session.py  connection.py  data_models.py  file_event_writer.py  interaction_monitor.py  network_monitor.py  storage_monitor.py  window_property_monitor.py
bluebox/data_models/: __init__.py  benchmarks.py  cdp.py  dom.py  resource_base.py  ui_elements.py  ui_interaction.py  window_property.py
bluebox/llms/: llm_client.py  (+2 more)
cdp_samples/: interaction_events.jsonl  network_consolidated_transactions.json  network_events.jsonl  storage_events.jsonl
docs/: demo.html
example_routines/: amtrak_one_way_train_search_input.json  amtrak_one_way_train_search_routine.json  download_arxive_paper_routine.json  get_new_polymarket_bets_routine.json  jetblue_oneway_flight_search_input.json  jetblue_oneway_flight_search_routine.json  massachusetts_corp_search_routine.json  spirit_flight_availability_search_input.json  spirit_flight_availability_search_routine.json  spotidown_track_download_input.json  spotidown_track_download_routine.json
execution_results/: pl_matchweek_matches_20260116_195324.json  pl_matchweek_team_goals_20260116_195443.json  premier_league_matchweek_20260116_202152.json  premier_league_matchweek_fetch_20260116_200112.json  premier_league_matchweek_summary_20260116_200214.json  premier_league_matchweek_summary_20260116_200809.json
routine_discovery_output/: message_history.json  root_transaction.json  routine.json
scripts/: browser_monitor.py  debug_parse_routine.py  discover_routines.py  execute_routine.py  quickstart.py  quickstart.sh  run_guide_agent.py  run_interaction_specialist.py  run_js_specialist.py  run_network_spy.py  test_response_id_reuse.py  transactions_sleuth.py
src/: config.py
tests/: conftest.py
web-hacker-env/: pyvenv.cfg
web_hacker/: config.py
(+198 files in other folders)
