# pyproject.toml for web-hacker

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-hacker"
version = "0.1.0"
description = " Reverse engineer any web app!"
readme = "README.md"
requires-python = ">=3.12.3,<3.13"  # pinning to 3.12.x
dependencies = [
    "ipykernel>=6.29.5",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
